--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Marius Popovici
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Triathlon, technology and related geekery
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://www.gravatar.com/avatar/8ce5af6d64a671fbba1edb92417268c0
@@ -34,7 +34,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: mariuspopovici
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
