--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: /:year/:month/:title.html
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
@@ -67,10 +67,23 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
+
+# Pagination Settings
+pagination:
+  enabled: true
+  per_page: 3
+  offset: 2
+  permalink: '/page/:num/'
+  title: ':title - page :num of :max'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-paginate-v2 # Enable post paging
 
 # Exclude these files from your production _site
 exclude:
@@ -79,3 +92,4 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
