--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 
-# Pagination Settings
+# Pagination Settings - These are for jekyll-paginate-v2 
 pagination:
   enabled: true
   debug: false
@@ -88,7 +88,8 @@ pagination:
 plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-  - jekyll-paginate-v2 # Enable post paging
+  - jekyll-paginate-v2 # Enable post paging - This plugin doesn't work on Github Pages
+  - jekyll-paginate # This works on Github Pages
 
 # Exclude these files from your production _site
 exclude:
