enabled old plugin

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,9 @@ pagination:
   trail:
     before: 2
     after: 2
-  
+
+# Pagination Settings - These are for jekyll-paginate (works on Github Pages)
+paginate: 5
 
 # Use the following plug-ins
 plugins:
