--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,6 @@ footer-links:
   twitter: mariusp
   youtube: # channel/<your_long_string> or user/<user-name>
 
-
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: mariuspopovici
@@ -42,7 +41,7 @@ url: https://mariuspopovici.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: ''
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -67,7 +66,7 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
-# Pagination Settings - These are for jekyll-paginate-v2 
+# Pagination Settings - These are for jekyll-paginate-v2
 pagination:
   enabled: true
   debug: false
@@ -82,13 +81,11 @@ pagination:
     before: 2
     after: 2
 
-
 # Use the following plug-ins
-plugins:
+plugins_dir:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-paginate-v2 # Enable post paging - This plugin doesn't work on Github Pages
-
 
 # Exclude these files from your production _site
 exclude:
@@ -97,4 +94,3 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-
