--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ pagination:
   collection: 'posts'
   per_page: 3
   permalink: '/page/:num/'
-  title: ':title - page :num of :max'
+  title: ':title - Page :num of :max'
   limit: 0
   sort_field: 'date'
   sort_reverse: true
