--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-paginate-v2 # Enable post paging - This plugin doesn't work on Github Pages
+  - jekyll-youtube
 
 # Exclude these files from your production _site
 exclude:
