--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ google_analytics: UA-131852681-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://mariuspopovici.github.io
+url: https://blog.popovici.net
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
